testdata/baselines/reference/submodule/conformance/checkJsdocSatisfiesTag9.errors.txt
/a.js(9,40): error TS8037: Type satisfaction expressions can only be used in TypeScript files.
/a.js(11,26): error TS2353: Object literal may only specify known properties, and 'd' does not exist in type 'Color'.


==== /a.js (2 errors) ====
    /**
     * @typedef {Object} Color
     * @property {number} r
     * @property {number} g
     * @property {number} b
     */
    
    // All of these should be Colors, but I only use some of them here.
    export const Palette = /** @satisfies {Record<string, Color>} */ ({
                                           ~~~~~~~~~~~~~~~~~~~~~
!!! error TS8037: Type satisfaction expressions can only be used in TypeScript files.
        white: { r: 255, g: 255, b: 255 },
        black: { r: 0, g: 0, d: 0 }, // <- oops! 'd' in place of 'b'
                             ~
!!! error TS2353: Object literal may only specify known properties, and 'd' does not exist in type 'Color'.
        blue: { r: 0, g: 0, b: 255 },
    });
    